<resources>
    <string name="app_name" translatable="false">Heroic Name Generator</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="your_name" translatable="false">Your name</string>
    <string name="your_last_name" translatable="false">Your first letter of last name</string>
    <string name="check_your_dragon_name" translatable="false">Check Your Heroic Name</string>
    <string name="your_dragon_name" translatable="false">Heroic Name</string>
    <string name="view_of_dragon" translatable="false">View of Heroic</string>
    <string name="your_dragon_name_is" translatable="false">Your heroic name is...</string>
    <string name="gradient_black_to_opacity" translatable="false">gradient black to opacity</string>
    <string name="reset" translatable="false">reset</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4844192903995686/6921944654</string>
    <string name="your_entries_are_used_only_for_generate_dragon_name_and_are_not_collected" translatable="false">Your entries are used only for generate dragon name and are not collected</string>
    <string name="random">random</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>



