<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#060825"
    android:orientation="vertical"
    tools:context="heroicnamegenerator.anuvi.HeroicName"
    tools:ignore="Overdraw">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/imageViewActivityDragonNameId"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:src="@drawable/j_the_colossus"
                        android:contentDescription="@string/view_of_dragon"
                        android:scaleType="centerCrop" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/gradient"
                        android:contentDescription="@string/gradient_black_to_opacity" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/your_dragon_name_is"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/dragonNameTextViewActivityDragonNameId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/your_dragon_name"
                    android:textColor="#FFFFFF"
                    android:textSize="60sp" />

                <TextView
                    android:id="@+id/dragonNameTextViewActivityDragonTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/your_dragon_name"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />






            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
